# Text2StoryPackage

./: .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
docs/source/: conf.py  index.rst  installation.rst  usage.rst
docs/source/examples/: add_custom_annotator.py  custom_annotator.py  extract_events.py  extract_participants_en.py  extract_participants_pt.py  extract_semantic_links.py  extract_time.py  load_models.py  narrative_object.py  read_brat_dir.py  read_brat_file.py  test_custom_annotator.py
text2story/: __init__.py  __main__.py
text2story/annotators/: __init__.py
text2story/annotators/ALLENNLP/: __init__.py  allen_wrapper.py  my_reader.py
text2story/annotators/BERTNERPT/: __init__.py
text2story/annotators/CUSTOMPT/: __init__.py  crf_v2.1.joblib  event_model.py  feature_extractor.py  gb_custom_event_pt.joblib
text2story/annotators/DBPEDIA/: __init__.py
text2story/annotators/MAVERICK/: __init__.py
text2story/annotators/NLTK/: __init__.py
text2story/annotators/PY_HEIDELTIME/: __init__.py
text2story/annotators/SPACY/: __init__.py
text2story/annotators/SRL/: __init__.py  evaluator.py  srl_pipeline.py
text2story/annotators/SRL/srl_model/: __init__.py  config.py  model.py
text2story/annotators/SRLWeakLabeling/: __init__.py
text2story/brat2viz/: README.md  brat.py  drs.py  requirements.txt
text2story/brat2viz/brat2drs/: brat2drs.py  files_monitor.py
text2story/brat2viz/brat2json/: brat2json.py
text2story/brat2viz/drs2viz/: app.py  parser.py  viz.py
text2story/brat2viz/drs2viz/static/: utils.js
text2story/brat2viz/drs2viz/templates/: display_text.html  graph.html  index.html  mscgen.html
text2story/core/: annotator.py  entity_structures.py  exceptions.py  graph_builder.py  link_structures.py  narrative.py  utils.py
text2story/experiments/: compare_ann.py  cp_notlusa.py  evaluate_gpt.py  evaluation.py  exp.json  exp_en_fn.json  exp_en_pb.json  metrics.py  run_experiments.py  stats.py
text2story/readers/: fn-lirics.json  read.py  read_ace.py  read_brat.py  read_csv.py  read_ecb.py  read_framenet.py  read_propbank.py  token_corpus.py  utils.py  vn-lirics.json
text2story/select/: bubble.py  entities.py  event.py  participants.py  sentences.py
text2story/text2viz/: Text2Viz.py  mygraph.html  notebook.ipynb  visualization.py
text2story/text2viz/files/: example.ann  example.txt  example_drs.txt
text2story/training/: participant_concept.py
text2story/viz/: bubble_tikz.py  msc.py
