# pyproject.toml

[build-system]
requires = ["setuptools> 61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "text2story"
version = "1.3.4"
readme = "README.md"
long_description = "file: README.md"
long_description_content_type = "text/markdown"
include = [
    "LICENSE"
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.urls]
Home = "https://github.com/LIAAD/Text2StoryPackage"


