[metadata]
description-file = README.md
name = text2story
version = 1.3.4
project_urls =
    Source =  https://github.com/LIAAD/Text2StoryPackage
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
   typing_extensions<=4.5.0
   langchain<=0.0.133
   netgraph
   pygraphviz
   networkx
   matplotlib
   scipy
   numpy < 1.24
   pandas < 2.0
   torchaudio <0.12
   torchdata <=0.3.0
   torchtext <= 0.12
   nltk
   datasets<=2.10.1
   overrides==3.1.0
   cached-path==1.1.2
   joblib
   requests<2.28.0
   allennlp==2.9.3
   allennlp-models==2.9.3
   spacy<=3.2.0
   pyspark
   spark-nlp
   elementpath
   sklearn-crfsuite
   plantuml
   LaTeXCompiler
   pdf2image
   pytest<=6.1.0
   py-heideltime
   pyarrow<10.0
   gdown
   inflect<6.0.0
   google-auth<2.18.0

[options.package_data]
example = *.joblib, *.json,annotators/ALLENNLP/Models/srl-pt_bertimbau-base/Vocabulary/*.txt, *.pt
* = README.md
