[metadata]
description-file = README.md
name = text2story
version = 1.5.0
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LIAAD/Text2StoryPackage

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
   joblib
   spacy
   py-heideltime
   importlib_metadata
   pandas<2.0.0
   plantuml
   matplotlib
   networkx
   netgraph
   pytorch-crf
   transformers
   torch
   pdf2image
   latexcompiler
   nltk
   thinc
   beautifulsoup4
   streamlit==1.3.1
   altair==4.2.2
   protobuf==3.20


[options.package_data]
example = *.joblib, *.json, *.pt
* = README.md
