[metadata]
description-file = README.md
name = text2story
version = 1.6.8
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LIAAD/Text2StoryPackage

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
   joblib
   importlib_metadata
   numpy
   spacy
   py_heideltime
   nltk
   transformers
   torch
   pytorch-crf
   bs4
   networkx
   plantuml
   pandas
   spacy-transformers
   evaluate
   matplotlib
   netgraph
   maverick-coref


[options.package_data]
example = *.joblib, *.json, *.pt
* = README.md
